<resources>
    <string name="app_name">Movies</string>
    <string name="title_series">Top Rated Series</string>
    <string name="title_movies">Top Rated Movies</string>

    <string name="transitionImage">transImage</string>
    <string name="transitionTitle">transTitle</string>
    <string name="transitionCard">transCard</string>
    <string name="transitionCardContainer">transCardContainer</string>
    <string name="transitionImageLayout">transitionImageLayout</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. at vero eos et accusam et justo duo dolores et ea rebum. stet clita kasd gub rgren, no sea takimata sanctus est lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut lab ore sit et dolore magna.</string>
</resources>