<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:transitionName="@string/transitionCardContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/transitionImageLayout">

            <ImageView
                android:id="@+id/detailsImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#e0e0e0"
                android:scaleType="centerCrop"
                android:transitionName="@string/transitionImage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="300:450"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:transitionName="@string/transitionCard"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_marginEnd="5dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_star"
                        android:tint="@android:color/white" />

                    <TextView
                        android:id="@+id/detailsRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:text="5.5" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/detailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:transitionName="@string/transitionTitle"
                tools:text="Joker" />

            <TextView
                android:id="@+id/moviesSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#555555"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Crime, Drama, Thriller" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@android:drawable/ic_lock_idle_alarm"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/detailsDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="#777777"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="122 min" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/detailsDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="#777777"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="12.06.2020" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#e0e0e0" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/detailsCoverImage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="#e0e0e0"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="15dp"
                    app:riv_mutate_background="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#e0e0e0" />


            <TextView
                android:id="@+id/detailsInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#555555"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Crime, Drama, Thriller" />


        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>