<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:layoutDescription="@xml/item_card_movies_scene_end">


    <androidx.cardview.widget.CardView
        android:id="@+id/moviesCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="35dp"
        android:transitionName="@string/transitionCardContainer"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/moviesImage"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#e0e0e0"
                android:scaleType="centerCrop"
                android:transitionName="@string/transitionImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:id="@+id/moviesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:transitionName="@string/transitionTitle"
                    tools:text="JOKER" />

                <TextView
                    android:id="@+id/moviesSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="JOKER" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/moviesDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:text="16.02.2020" />

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="2dp"
                        android:background="@android:color/darker_gray" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardStarHolder"
                        android:layout_width="80dp"
                        android:layout_height="27dp"
                        android:layout_marginEnd="10dp"
                        android:transitionName="@string/transitionCard"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="13dp"
                                android:layout_marginEnd="5dp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/ic_star"
                                android:tint="@android:color/white" />

                            <TextView
                                android:id="@+id/moviesRating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                tools:text="5.5" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.motion.widget.MotionLayout>